fixed CSS layout issues for map view

--- a/site/campusbuzz/app/modules/buzz/css/detail-common.css
+++ b/site/campusbuzz/app/modules/buzz/css/detail-common.css
@@ -37,7 +37,7 @@ select {
 	padding-left: 10px;
 	background: #e5592e;
    height: 20px;
-   width: 200px;
+   width: 230px;
    left:0%;
    top: -60px;
    position: absolute;
